<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>



    <groupId>net.coagulate.SL</groupId>
    <artifactId>GPHUD</artifactId>
    <version>3.16.4</version>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub CoagulateSL/GPHUD Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/CoagulateSL/GPHUD</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub CoagulateSL/GPHUD Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/CoagulateSL/GPHUD</url>
        </repository>
    </repositories>
    <build>
        <directory>${project.basedir}/bin</directory>
        <outputDirectory>${project.basedir}/out</outputDirectory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <testOutputDirectory>${project.basedir}/test</testOutputDirectory>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <resources><resource><directory>resources</directory><filtering>true</filtering></resource></resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>net.coagulate.SL.SL</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>net.coagulate.SL.SL</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>net.coagulate.SL</groupId>
            <artifactId>JavaCore</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.coagulate.SL</groupId>
            <artifactId>SLCore</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    
</project>